Bug 474230. Cleanup scale and translate in nsSVGElement similar to the new style SVG classes. r=jwatt